openshift/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
  namespace: yakprog-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
    spec:
      containers:
        - name: products-service
          image: ghcr.io/yakirovadya/products-service:latest
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true
