openshift/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: yakprog-dev
spec:
  selector:
    app: products-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
