openshift/products-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: products-service
  namespace: yakprog-dev
spec:
  to:
    kind: Service
    name: products-service
  port:
    targetPort: 3000
  tls:
    termination: edge
